--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -248,7 +248,7 @@
     padding: 0.5rem 0 0.5rem 0.5rem;
 }
 
-#modal-add-product{
+#modal-add-product, #modal-detail-product, #modal-edit-product{
     width: 100vw;
     height: 100vh;
     display: none;
@@ -264,7 +264,7 @@
     opacity: 0.7;
 }
 
-#form-add-product{
+#form-add-product, #form-detail-product, #form-edit-product{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -287,7 +287,7 @@
     align-items: center;
 }
 
-.add-product-input{
+.product-input{
     width: 100%;
     border: 1px solid lightgray;
     outline: none;
@@ -295,10 +295,16 @@
     border-radius: 0.5rem;
 }
 
-#image-add-upload{
+#image-add-upload, #image-detail-upload, #image-edit-upload{
     width: 15rem;
     height: 15rem;
     object-fit: cover;
+}
+
+.footer-modal{
+    display: flex;
+    flex-direction: column;
+    gap: 0.3rem;
 }
 
 .footer-modal button{
@@ -309,6 +315,10 @@
     border: 1px solid black;
     color: white;
     border-radius: 0.5rem;
+}
+
+.footer-modal p{
+    font-size: 0.8rem;
 }
 
 .add-product-icon-container{
@@ -763,9 +773,26 @@
 }
 
 .product{
+    width: 100%;
     display: flex;
     gap: 0.5rem;
     height: auto;
+}
+
+.product-function{
+    width: 4rem;
+    height: 100%;
+    display: flex;
+}
+
+.product-edit{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 2rem;
+    height: 100%;
+    background: gray;
+    color: lightgray;
 }
 
 .product-remove{
@@ -798,6 +825,14 @@
 }
 
 #image-upload-add-input{
+    display: none;
+}
+
+#image-upload-detail-input{
+    display: none;
+}
+
+#image-upload-edit-input{
     display: none;
 }
 
@@ -837,7 +872,7 @@
     border-radius: 0.5rem;
 }
 
-#notification-product{
+#notification-product, #notification-product-detail{
     width: 100%;
     padding: 0.5rem;
     border-radius: 0.5rem;
@@ -847,7 +882,7 @@
     border: 1px dashed lightgray;
 }
 
-#notification-product img{
+#notification-product img, #notification-product-detail img{
     width: 1rem;
     height: 1rem;
 }
