--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -265,12 +265,31 @@
 }
 
 #form-add-product, #form-detail-product, #form-edit-product{
+    position: relative;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     gap: 0.5rem;
     padding: 0.5rem;
     background: white;
+}
+
+.load-product-modal, .success-product-modal{
+    width: 100%;
+    height: 100%;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.load-product-modal img, .success-product-modal img{
+    width: 7rem;
+    height: 7rem;
+    object-fit: cover;
+    border-radius: 50%;
 }
 
 .header-modal{
@@ -872,7 +891,7 @@
     border-radius: 0.5rem;
 }
 
-#notification-product, #notification-product-detail{
+#notification-product, #notification-edit-product{
     width: 100%;
     padding: 0.5rem;
     border-radius: 0.5rem;
@@ -882,7 +901,7 @@
     border: 1px dashed lightgray;
 }
 
-#notification-product img, #notification-product-detail img{
+#notification-product img, #notification-edit-product img{
     width: 1rem;
     height: 1rem;
 }
