--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -439,6 +439,7 @@
 }
 
 #product-to-order-footer-modal{
+    position: relative;
     display: flex;
     height: calc(100vh - 11rem);
     flex-direction: column;
@@ -508,6 +509,7 @@
 }
 
 #product-in-order-modal{
+    position: relative;
     height: calc(100vh - 22rem);
     display: flex;
     flex-direction: column;
@@ -904,6 +906,24 @@
 #notification-product img, #notification-edit-product img{
     width: 1rem;
     height: 1rem;
+}
+
+#emty-icon-order-container{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#emty-icon-order-container img{
+    width: 10rem;
+    height: 10rem;
+    border-radius: 50%;
+    object-fit: cover;
 }
 
 @media only screen and (max-width: 600px) {
