--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -608,7 +608,7 @@
     border-radius: 0.5rem;
 }
 
-.table-number{
+.table-number, .bill-number{
     font-size: 2rem;
 }
 
@@ -743,9 +743,9 @@
 
 .emty-icon-container{
     width: 100%;
-    height: 100%;
+    height: calc(100vh - 9rem);
     position: absolute;
-    top: 0;
+    top: 3rem;
     left: 0;
     display: none;
     justify-content: center;
