--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -7,6 +7,16 @@
     font-family: 'Roboto', sans-serif;
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type=number] {
+  -moz-appearance-: textfield;
+}
+
 #menu-container {
     position: relative;
     width: 5rem;
@@ -189,6 +199,20 @@
     object-fit: cover;
 }
 
+#header-box-dashboard{
+    padding-bottom: 0.5rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#header-box-dashboard input{
+    padding: 0.2rem;
+    border: 1px solid lightgray;
+    border-radius: 0.2rem;
+    outline: none;
+}
+
 #header-chart {
     margin-top: 0.5rem;
     display: flex;
@@ -196,8 +220,13 @@
     align-items: center;
 }
 
-#header-chart select {
-    padding: 0.2rem 1rem;
+#header-chart input {
+    width: 4rem;
+    text-align: center;
+    padding: 0.2rem;
+    border: 1px solid lightgray;
+    border-radius: 0.2rem;
+    outline: none;
 }
 
 .header-tab {
